--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  font-weight: 15px;
+  font-size: 15px;
 }
 
 :root {
@@ -16,10 +16,40 @@ html {
 body {
   margin: 0;
   font-family: var(--ff);
-  background-color: var(--primary-clr);
+  background-color: var(--secondary-clr-light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: 1.5rem;
+  text-align: center;
+  color: var(--secondary-clr-dark);
+  font-weight: var(--fw-b);
+}
+
+p {
+  text-align: center;
+  font-weight: var(--fw-m);
+  color: var(--primary-clr)
 }
 
 .container {
-    margin: 0 auto;
+    justify-content: center;
+    width: 300px;
+    margin: 2em auto;
+    padding: 1em;
     background-color: white;
+    border-radius: 20px;
+}
+
+.text-container {
+  margin: 0 auto;
+  padding: 1.25em;
+}
+
+.qr-img {
+  width: 100%;
+  border-radius: 10px;
 }
