--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ p {
 }
 
 .container {
-    width: 300px;
+    max-width: 300px;
     padding: 1em;
     background-color: white;
     border-radius: 20px;
     margin-top: auto;
-    box-shadow: 0 10px 12px 1px  hsl(220, 15%, 55%, .3);
+    box-shadow: 0 10px 12px 1px  hsl(220, 15%, 55%, .1);
 }
 
 .text-container {
